--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^3.0.1",
+    "scheduler": "^0.26.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -18,7 +19,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
